Correct styling so footer doesn't overlap content

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@ $ace-orange : #E45226;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 20%;
+  min-height: 20%;
 }
 
 .orange-bar{
